--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Assignment3Mobile</string>
+    <string name="app_name">Assignment3</string>
+    <string name="edit_movie">Content Description</string>
+    <string name="delete_movie">Delete description</string>
+    <string name="movie_poster">Movie poster placeholder</string>
 </resources>
